--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply font-primary bg-gray-200;
+    /* @apply font-primary bg-gray-200; */
   }
   .dropdown {
     @apply w-full lg:max-w-[296px] cursor-pointer;
@@ -21,4 +21,8 @@
   .dropdown-menu {
     @apply px-6 py-8 text-[15px] space-y-6 shadow-md bg-white absolute w-full z-10 list-none rounded-b-lg;
   }
+}
+
+html {
+  --logo-color: #B6020F;
 }
