--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,22 @@
 html {
   --logo-color: #B6020F;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background:  var(--logo-color); 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #aca6a6; 
+}
