--- a/src/components/css/Pagination.css
+++ b/src/components/css/Pagination.css
@@ -1,28 +1,30 @@
 .pagination {
-    margin: 15px auto;
+    margin: auto;
     display: flex;
     list-style: none;
     outline: none;
 }
-.pagination > .page-active > a{
+.pagination > .page-active > a {
     background-color: var(--logo-color);
     border-color: var(--logo-color);
     color: #fff;
 }
-.pagination > li > a{
-    border: 1px solid var(--logo-color);
+.pagination > li > a {
+    border: 2px solid var(--logo-color);
+    border-radius: 10px;
     padding: 5px 10px;
     outline: none;
     cursor: pointer;
+    margin-left: 0.5em;
 }
 .pagination > .active > a, .pagination > .page-active > span, .pagination > .page-active > a:hover, .pagination > .page-active > span:hover, .pagination > .page-active > a:focus, .pagination > .page-active > span:focus {
     background-color: var(--logo-color);
     border-color: var(--logo-color);
     outline: none ;
 }
-.pagination > li > a, .pagination > li > span{
+.pagination > li > a, .pagination > li > span {
     color: var(--logo-color);
 }
 .pagination > li:first-child > a, .pagination > li:first-child > span, .pagination > li:last-child > a, .pagination > li:last-child > span {
-    border-radius: unset
+    border-radius: 10px;
 }
